# todo-python

./: .gitignore  LICENSE  README.md  TODO.md  config.yaml  pyproject.toml  test-config.yaml
.github/workflows/: python-app.yml
app/: __init__.py  admin.py  auth.py  config.py  crud.py  db.py  main.py  models.py  schemas.py
app/internal/: __init__.py  auth.py  config.py  db.py  exceptions.py  models.py  schemas.py
tests/: test_database.py  test_jwtauthentication.py
