[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["furrygem"]
packages = [
    { include="app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
SQLAlchemy = "^1.4.36"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
"dogpile.cache" = "^1.1.5"
bcrypt = "^3.2.2"
PyJWT = "^2.3.0"
PyYAML = "^6.0"
yamldataclassconfig = "^1.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
